--- a/question3.html
+++ b/question3.html
@@ -2,141 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Johan Joseph - Resume</title>
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 20px;
-            color: #fff;
-            background: #1e1e1e;
-        }
-        .container {
-            display: flex;
-            flex-direction: row;
-            width: 100%;
-            max-width: 900px;
-            margin: auto;
-            background: #1e1e1e;
-            color: #fff;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-        .left {
-            width: 35%;
-            padding: 20px;
-            background: #1a1a1a;
-            box-sizing: border-box;
-        }
-        .right {
-            width: 65%;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-        h1 {
-            text-align: center;
-            font-size: 28px;
-            text-transform: uppercase;
-            color: #ffcc00;
-        }
-        .section {
-            margin-bottom: 20px;
-        }
-        .section h2 {
-            border-bottom: 2px solid #ffcc00;
-            padding-bottom: 5px;
-            font-size: 20px;
-            color: #ffcc00;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        ul li {
-            margin: 10px 0;
-            font-size: 16px;
-        }
-        .skill-bar {
-            background: #333;
-            height: 10px;
-            border-radius: 5px;
-            overflow: hidden;
-            margin-top: 5px;
-        }
-        .skill-fill {
-            height: 100%;
-            background: #ffcc00;
-        }
-        a {
-            color: #ffcc00;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
 </head>
 <body>
-    <div class="container">
-        <div class="left">
-            <h1>Johan Joseph</h1>
-            <div class="section">
-                <h2>Contact</h2>
-                <p>Email: johanj2036@gmail.com</p>
-                <p>GitHub: <a href="https://github.com/johanjoseph29" target="_blank">johanjoseph29</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/johan-joseph-3bb586331/" target="_blank">johanjoseph</a></p>
-            </div>
-            <div class="section">
-                <h2>Education</h2>
-                <p><strong>Amal Jyothi College of Engineering</strong></p>
-                <p>B.Tech in Computer Science & Engineering (2024 - 2028)</p>
-            </div>
-            <div class="section">
-                <h2>Skills</h2>
-                <p>Java</p>
-                <div class="skill-bar"><div class="skill-fill" style="width: 90%;"></div></div>
-                <p>Python</p>
-                <div class="skill-bar"><div class="skill-fill" style="width: 85%;"></div></div>
-                <p>C</p>
-                <div class="skill-bar"><div class="skill-fill" style="width: 75%;"></div></div>
-            </div>
-        </div>
-        <div class="right">
-            <div class="section">
-                <h2>Objective</h2>
-                <p>A passionate backend developer focused on building scalable and efficient systems, with experience in AI-driven finance solutions. Developed an AI-driven finance bot that assists in investment decisions using real-time data and predictive analytics.</p>
-            </div>
-            
-            <div class="section">
-                <h2>Projects</h2>
-                <ul>
-                    <li><strong>AI Crush</strong> - A chatbot built using Gemini AI with a Flutter frontend.</li>
-                    <li><strong>TechVortex2.0 AI ChatBot</strong> - AI-driven chatbot utilizing Gemini AI and Yahoo Finance API for financial insights.</li>
-                    <li><strong>ParkScout</strong> - Designed the UI for a smart location-based service to help users find the best parking spots in real time.</li>
-                </ul>
-            </div>
-            <div class="section">
-                <h2>Certifications</h2>
-                <ul>
-                    <li>HackerRank Java (Basic) Certification</li>
-                </ul>
-            </div>
-            <div class="section">
-                <h2>Hackathons</h2>
-                <ul>
-                    <li>Participated in Crushathon and developed AI Crush, a chatbot built using Gemini AI with a Flutter frontend.</li>
-                    <li>Competed in GDG Google Challenge Hackathon</li>
-                </ul>
-            </div>
-            <div class="section">
-                <h2>Achievements</h2>
-                <ul>
-                    <li>Placed 14th in CodePlus, conducted by VITC ACM Student Chapter, for outstanding performance in competitive programming.</li>
-                    <li>Developed a GenAI-based financial assistant for investment guidance.</li>
-                </ul>
-            </div>
-        </div>
-    </div>
+
+    <h1 align="center">Johan Joseph</h1>
+    <p align="center"><b>Backend Developer | AI Enthusiast | CSE Student</b></p>
+    <hr>
+
+    <h2>Contact</h2>
+    <p>Email: johanj2036@gmail.com</p>
+    <p>GitHub: <a href="https://github.com/johanjoseph29" target="_blank">github.com/johanjoseph29</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/johan-joseph-3bb586331/" target="_blank">linkedin.com/in/johan-joseph</a></p>
+
+    <h2>Education</h2>
+    <p><b>Amal Jyothi College of Engineering</b></p>
+    <p>B.Tech in Computer Science & Engineering (2024 - 2028)</p>
+
+    <h2>Skills</h2>
+    <ul>
+        <li>Java</li>
+        <li>Python</li>
+        <li>C</li>
+    </ul>
+
+    <h2>Objective</h2>
+    <p>
+        A passionate backend developer focused on building scalable and efficient systems,
+        with experience in AI-driven finance solutions. Developed an AI-driven finance bot
+        that assists in investment decisions using real-time data and predictive analytics.
+    </p>
+
+    <h2>Projects</h2>
+    <ul>
+        <li><b>AI Crush</b> – A chatbot built using Gemini AI with a Flutter frontend.</li>
+        <li><b>TechVortex2.0 AI ChatBot</b> – Financial assistant using Gemini AI & Yahoo Finance API.</li>
+        <li><b>ParkScout</b> – UI for smart location-based parking spot finder.</li>
+    </ul>
+
+    <h2>Certifications</h2>
+    <ul>
+        <li>HackerRank Java (Basic) Certification</li>
+    </ul>
+
+    <h2>Hackathons</h2>
+    <ul>
+        <li>Crushathon – Built AI Crush chatbot using Gemini AI + Flutter.</li>
+        <li>GDG Google Challenge Hackathon – Participated and built AI tools.</li>
+    </ul>
+
+    <h2>Achievements</h2>
+    <ul>
+        <li>14th place in CodePlus (VITC ACM Student Chapter) – Competitive programming.</li>
+        <li>Developed a GenAI-based financial assistant for investment guidance.</li>
+    </ul>
+
 </body>
 </html>
