--- a/question4.html
+++ b/question4.html
@@ -2,95 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Thiruvananthapuram</title>
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(to right, #4facfe, #00f2fe);
-            color: #fff;
-        }
-        header {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px 0;
-            text-align: center;
-            font-size: 1.5em;
-        }
-        nav {
-            background: rgba(0, 0, 0, 0.5);
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: #fff;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
-        nav a:hover {
-            color: #ffeb3b;
-        }
-        .container {
-            padding: 20px;
-            text-align: center;
-        }
-        .hometown-intro {
-            background: rgba(255, 255, 255, 0.2);
-            padding: 20px;
-            margin: 20px auto;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-            width: 80%;
-            transition: transform 0.3s;
-        }
-        .hometown-intro:hover {
-            transform: scale(1.05);
-        }
-        .hometown-intro h2 {
-            color: #ffeb3b;
-        }
-        .hometown-intro p {
-            line-height: 1.6;
-        }
-    </style>
 </head>
 <body>
 
-    <header>
-        <h1>Welcome to Thiruvananthapuram</h1>
-    </header>
+    <h1 align="center">Welcome to Thiruvananthapuram</h1>
+    <hr>
 
-    <nav>
-        <a href="#kovalam">Kovalam</a>
-        <a href="#ponmudi">Ponmudi</a>
-        <a href="#padmanabhaswamy">Padmanabhaswamy Temple</a>
-        <a href="#varkala">Varkala</a>
-    </nav>
+    <h2>Navigation</h2>
+    <ul>
+        <li><a href="#kovalam">Kovalam</a></li>
+        <li><a href="#ponmudi">Ponmudi</a></li>
+        <li><a href="#padmanabhaswamy">Padmanabhaswamy Temple</a></li>
+        <li><a href="#varkala">Varkala</a></li>
+    </ul>
 
-    <div class="container">
-        <div id="kovalam" class="hometown-intro">
-            <h2>Kovalam</h2>
-            <p>Famous for its golden beaches and lighthouse, Kovalam is the perfect tropical getaway.</p>
-        </div>
+    <hr>
 
-        <div id="ponmudi" class="hometown-intro">
-            <h2>Ponmudi</h2>
-            <p>A scenic hill station with winding roads, misty peaks, and lush greenery.</p>
-        </div>
+    <h2 id="kovalam">Kovalam</h2>
+    <p>
+        Kovalam is a beach town by the Arabian Sea in Thiruvananthapuram. It is known for its crescent-shaped beaches and lighthouse.
+        <br>
+        <a href="https://en.wikipedia.org/wiki/Kovalam" target="_blank">Read more on Wikipedia</a>
+    </p>
 
-        <div id="padmanabhaswamy" class="hometown-intro">
-            <h2>Padmanabhaswamy Temple</h2>
-            <p>One of the richest temples in the world, showcasing stunning Dravidian architecture.</p>
-        </div>
+    <h2 id="ponmudi">Ponmudi</h2>
+    <p>
+        Ponmudi is a hill station located in the Western Ghats. It is known for its misty mountains, trekking trails, and biodiversity.
+        <br>
+        <a href="https://en.wikipedia.org/wiki/Ponmudi" target="_blank">Read more on Wikipedia</a>
+    </p>
 
-        <div id="varkala" class="hometown-intro">
-            <h2>Varkala</h2>
-            <p>Known for its unique cliffs, vibrant beach life, and spiritual charm.</p>
-        </div>
-    </div>
+    <h2 id="padmanabhaswamy">Padmanabhaswamy Temple</h2>
+    <p>
+        This ancient temple is dedicated to Lord Vishnu and is considered one of the richest places of worship in the world.
+        <br>
+        <a href="https://en.wikipedia.org/wiki/Padmanabhaswamy_Temple" target="_blank">Read more on Wikipedia</a>
+    </p>
+
+    <h2 id="varkala">Varkala</h2>
+    <p>
+        Varkala is famous for its cliffs adjacent to the Arabian Sea, and also for its beach, temples, and natural springs.
+        <br>
+        <a href="https://en.wikipedia.org/wiki/Varkala" target="_blank">Read more on Wikipedia</a>
+    </p>
+
+    <hr>
+    <p align="center">Created by Johan Joseph</p>
 
 </body>
 </html>
