--- a/question5.html
+++ b/question5.html
@@ -1,123 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Blog</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background: #0073e6;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            font-size: 1.8em;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background: #005bb5;
-            padding: 10px;
-        }
-        nav a {
-            color: #fff;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-        nav a:hover {
-            color: #ffeb3b;
-        }
-        .container {
-            max-width: 1200px;
-            margin: auto;
-            padding: 20px;
-            display: grid;
-            grid-template-columns: 2fr 1fr;
-            gap: 20px;
-        }
-        .blog-post {
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s;
-        }
-        .blog-post:hover {
-            transform: scale(1.02);
-        }
-        .blog-post h2 {
-            color: #0073e6;
-        }
-        .blog-post p {
-            line-height: 1.6;
-        }
-        .sidebar {
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .sidebar h3 {
-            color: #0073e6;
-        }
-        footer {
-            background: #0073e6;
-            color: #fff;
-            text-align: center;
-            padding: 15px;
-            margin-top: 20px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Virat Kohli – The Run Machine</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f7f9fc;
+      color: #333;
+    }
+
+    header {
+      background-color: #1a1a2e;
+      color: white;
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+
+    header p {
+      font-style: italic;
+      margin-top: 10px;
+      color: #ccc;
+    }
+
+    .content {
+      max-width: 900px;
+      margin: 40px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.05);
+    }
+
+    .content h2 {
+      color: #1a1a2e;
+      margin-top: 30px;
+    }
+
+    .content p {
+      line-height: 1.8;
+      margin-bottom: 20px;
+    }
+
+    footer {
+      background-color: #1a1a2e;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+
+    @media (max-width: 600px) {
+      .content {
+        padding: 20px;
+      }
+
+      header h1 {
+        font-size: 1.8em;
+      }
+    }
+  </style>
 </head>
 <body>
 
-    <header>
-        <h1>Modern Blog</h1>
-    </header>
+  <header>
+    <h1>Virat Kohli – The Run Machine</h1>
+    <p>A legend still writing his story</p>
+  </header>
 
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-    </nav>
+  <div class="content">
+    <h2>The Rise of a Star</h2>
+    <p>From leading India to victory in the U-19 World Cup in 2008 to becoming one of the greatest batsmen of all time, Virat Kohli’s journey has been nothing short of extraordinary. With unmatched consistency, fierce aggression, and a relentless hunger for runs, Kohli has redefined modern-day batting.</p>
 
-    <div class="container">
-        <div class="blog-section">
-            <div class="blog-post">
-                <h2>Exploring the Future of AI</h2>
-                <p>Artificial Intelligence is rapidly transforming industries worldwide. Explore the latest innovations in AI.</p>
-                <a href="#">Read More</a>
-            </div>
-            <div class="blog-post">
-                <h2>Top 10 Travel Destinations</h2>
-                <p>Looking for your next adventure? Here are the top 10 must-visit travel destinations this year.</p>
-                <a href="#">Read More</a>
-            </div>
-        </div>
-        <div class="sidebar">
-            <h3>About the Author</h3>
-            <p>A tech enthusiast and travel lover sharing thoughts on technology, lifestyle, and adventures.</p>
-            <h3>Popular Topics</h3>
-            <ul>
-                <li><a href="#">Technology</a></li>
-                <li><a href="#">Travel</a></li>
-                <li><a href="#">Lifestyle</a></li>
-            </ul>
-        </div>
-    </div>
+    <h2>Mr. Consistent</h2>
+    <p>Whether it's a pressure chase or a tricky pitch abroad, Virat Kohli thrives when it matters most. With over 70 international centuries and a batting average that most dream of, he has become the benchmark for batting excellence across formats. His ODI performances, especially while chasing, are legendary — earning him the nickname "Chase Master".</p>
 
-    <footer>
-        <p>Stay Connected | Follow on Social Media</p>
-    </footer>
+    <h2>Leading with Passion</h2>
+    <p>As a captain, Kohli brought intensity and discipline to Indian cricket. He led India to its first Test series win in Australia and transformed the fitness culture of the team. His passion for the game, visible in every roar and celebration, has inspired millions of fans around the globe.</p>
+
+    <h2>Beyond the Numbers</h2>
+    <p>More than just statistics, Kohli’s impact lies in his attitude — fearless, intense, and never willing to settle. He plays with his heart on his sleeve and gives it all for the country every time he steps onto the field. For the new generation, he is not just a cricketer, but a role model who embodies focus, dedication, and belief.</p>
+
+    <h2>The Legacy Continues</h2>
+    <p>Even in 2025, Kohli continues to silence critics and thrill fans with his performances. From IPL masterclasses to World Cup heroics, the King is far from done. Every cover drive, every roar, and every run adds to a legacy that will echo through cricketing history forever.</p>
+    
+    <p><strong>Virat Kohli isn’t just a player. He’s an era.</strong></p>
+  </div>
+
+  <footer>
+    <p>Written by a true fan | #KingKohli #GoIndia</p>
+  </footer>
 
 </body>
 </html>
