--- a/q6.html
+++ b/q6.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Blog</title>
+  <meta charset="UTF-8">
+  <title>Virat Kohli – The Run Machine</title>
 </head>
 <body>
 
-    <header>
-        <h1>Modern Blog</h1>
-    </header>
+  <h1>Virat Kohli – The Run Machine</h1>
+  <p><em>A legend still writing his story</em></p>
 
-    <nav>
-        <a href="#">Home</a> |
-        <a href="#">About</a> |
-        <a href="#">Blog</a> |
-        <a href="#">Contact</a>
-    </nav>
+  <h2>The Rise of a Star</h2>
+  <p>
+    From leading India to victory in the U-19 World Cup in 2008 to becoming one of the greatest batsmen of all time, 
+    Virat Kohli’s journey has been nothing short of extraordinary. With unmatched consistency, fierce aggression, 
+    and a relentless hunger for runs, Kohli has redefined modern-day batting.
+  </p>
 
-    <main>
-        <section>
-            <article>
-                <h2>Exploring the Future of AI</h2>
-                <p>Artificial Intelligence is rapidly transforming industries worldwide. Explore the latest innovations in AI.</p>
-                <a href="#">Read More</a>
-            </article>
+  <h2>Mr. Consistent</h2>
+  <p>
+    Whether it's a pressure chase or a tricky pitch abroad, Virat Kohli thrives when it matters most. 
+    With over 70 international centuries and a batting average that most dream of, he has become the benchmark 
+    for batting excellence across formats. His ODI performances, especially while chasing, are legendary — 
+    earning him the nickname "Chase Master".
+  </p>
 
-            <article>
-                <h2>Top 10 Travel Destinations</h2>
-                <p>Looking for your next adventure? Here are the top 10 must-visit travel destinations this year.</p>
-                <a href="#">Read More</a>
-            </article>
-        </section>
+  <h2>Leading with Passion</h2>
+  <p>
+    As a captain, Kohli brought intensity and discipline to Indian cricket. He led India to its first Test series 
+    win in Australia and transformed the fitness culture of the team. His passion for the game, visible in every roar 
+    and celebration, has inspired millions of fans around the globe.
+  </p>
 
-        <aside>
-            <h3>About the Author</h3>
-            <p>A tech enthusiast and travel lover sharing thoughts on technology, lifestyle, and adventures.</p>
+  <h2>Beyond the Numbers</h2>
+  <p>
+    More than just statistics, Kohli’s impact lies in his attitude — fearless, intense, and never willing to settle. 
+    He plays with his heart on his sleeve and gives it all for the country every time he steps onto the field. 
+    For the new generation, he is not just a cricketer, but a role model who embodies focus, dedication, and belief.
+  </p>
 
-            <h3>Popular Topics</h3>
-            <ul>
-                <li><a href="#">Technology</a></li>
-                <li><a href="#">Travel</a></li>
-                <li><a href="#">Lifestyle</a></li>
-            </ul>
-        </aside>
-    </main>
+  <h2>The Legacy Continues</h2>
+  <p>
+    Even in 2025, Kohli continues to silence critics and thrill fans with his performances. 
+    From IPL masterclasses to World Cup heroics, the King is far from done. Every cover drive, every roar, 
+    and every run adds to a legacy that will echo through cricketing history forever.
+  </p>
 
-    <footer>
-        <p>Stay Connected | Follow on Social Media</p>
-    </footer>
+  <p><strong>Virat Kohli isn’t just a player. He’s an era.</strong></p>
+
+  <hr>
+  <p><small>Written by a true fan | #KingKohli #GoIndia</small></p>
 
 </body>
 </html>
